[gd_scene load_steps=2 format=3 uid="uid://ciga0na3f44d4"]

[ext_resource type="Script" path="res://Scripts/vocab.gd" id="1_6o7p8"]

[node name="Vocab" type="Node2D"]
script = ExtResource("1_6o7p8")

[node name="Cards" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 100

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Return" type="Button" parent="CanvasLayer"]
offset_right = 300.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 50
text = "Return
"

[node name="Up" type="Button" parent="CanvasLayer"]
offset_left = 810.0
offset_right = 1110.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 50
text = "^"

[node name="Down" type="Button" parent="CanvasLayer"]
offset_left = 1110.0
offset_top = 1080.0
offset_right = 1410.0
offset_bottom = 1180.0
rotation = 3.14159
theme_override_font_sizes/font_size = 50
text = "^"

[connection signal="pressed" from="CanvasLayer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="CanvasLayer/Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="CanvasLayer/Down" to="." method="_on_down_pressed"]
